# termcolor

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  FAQ.md  GUIDE.md  ISSUE_TEMPLATE.md  README-NEW.md  README.md  appveyor.yml  benchsuite  benchsuite.summary  build.rs  compile  snapcraft.yaml
.github/workflows/: ci.yml
benches/: README.md  bench.rs
benchsuite/: benchsuite  raw.csv
benchsuite/runs/2016-09-20-ubuntu1604-ec2/: raw.csv  summary
benchsuite/runs/2018-01-08-archlinux-cheetah/: README
ci/: before_deploy.sh  install.sh  script.sh  sha256.sh  test_complete.sh  utils.sh
complete/: _rg
doc/: convert-to-man  rg.1  rg.1.md  rg.1.txt.tpl
globset/: Cargo.toml  README.md
globset/benches/: bench.rs
globset/src/: glob.rs  lib.rs  pathutil.rs  pattern.rs
grep/: Cargo.toml
grep/src/: lib.rs  literals.rs  nonl.rs  search.rs  word_boundary.rs
ignore/: Cargo.toml  README.md
ignore/examples/: walk.rs
ignore/src/: dir.rs  gitignore.rs  lib.rs  overrides.rs  types.rs  walk.rs
ignore/tests/: gitignore_matched_path_or_any_parents_tests.rs
pkg/archlinux/: .gitignore  PKGBUILD
pkg/brew/: ripgrep-bin.rb  ripgrep.rb
src/: app.rs  args.rs  atty.rs  decoder.rs  gitignore.rs  glob.rs  ignore.rs  lib.rs  literals.rs  main.rs  nonl.rs  out.rs  pathutil.rs  printer.rs  search.rs  search_buffer.rs  search_stream.rs  sys.rs  terminal.rs  terminal_win.rs  types.rs  unescape.rs  walk.rs  worker.rs
termcolor/: Cargo.toml  README.md
termcolor/src/: lib.rs
tests/: tests.rs  workdir.rs
wincolor/: Cargo.toml  README.md
wincolor/src/: lib.rs  win.rs
