[package]
name = "termcolor"
version = "1.1.3"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A simple cross platform library for writing colored text to a terminal.
"""
documentation = "https://docs.rs/termcolor"
homepage = "https://github.com/BurntSushi/termcolor"
repository = "https://github.com/BurntSushi/termcolor"
readme = "README.md"
keywords = ["windows", "win", "color", "ansi", "console"]
license = "Unlicense OR MIT"
exclude = ["/.travis.yml", "/appveyor.yml", "/ci/**"]
edition = "2018"

[lib]
name = "termcolor"
bench = false

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.3"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
# TODO: Re-enable this once the MSRV is 1.43 or greater.
# See: https://github.com/BurntSushi/termcolor/issues/35
# doc-comment = "0.3"

[package.metadata.docs.rs]
features = ["serde"]
