[package]
name = "ignore"
version = "0.1.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense/MIT"

[lib]
name = "ignore"
bench = false

[dependencies]
crossbeam = "0.2"
globset = { version = "0.1.2", path = "../globset" }
lazy_static = "0.2"
log = "0.3"
memchr = "0.1"
regex = "0.1.77"
thread_local = "0.3.0"
walkdir = "1"

[dev-dependencies]
tempdir = "0.3.5"

[features]
simd-accel = ["globset/simd-accel"]

[profile.release]
debug = true
